<resources>
    <string name="app_name" translatable="false">Medicazelda</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="param_buttun">Bouton Paramètre</string>
    <string name="bienvenue_sur_medicalink">Bienvenue sur Medicazelda !</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="me_connecter">Me connecter</string>
    <string name="creer_mon_profil">Créer mon profil</string>
    <string name="changer_utilisateur">Changer d\'utilisateur</string>
    <string name="selectionner_un_profil">Sélectionner un profil</string>
    <string name="ajouter_un_profil">Ajouter un profil</string>
    <string name="medicalink_title" translatable="false">Medicazelda</string>
    <string name="creer_profil_votre_profil">Votre profil</string>
    <string name="creer_profil_adresse_email">Adresse Email</string>
    <string name="creer_profil_professionnel_de_sante">Professionnel de santé</string>
    <string name="creer_profil_informations_personnelles">Informations personnelles</string>
    <string name="bouton_creer_mon_profil">Créer mon profil</string>
    <string name="creer_profil_mot_de_passe">Mot de passe</string>
    <string name="creer_profil_nom">Nom</string>
    <string name="creer_profil_statut">Statut</string>
    <string name="creer_profil_rgpd">J\'accepte les conditions en matière de protection des données relatives au RGPD</string>
    <string name="creer_profil_prenom">Prénom</string>
    <string name="creer_profil_date_de_naissance">Date de naissance</string>
    <string name="dialog_dosage">Dosage</string>
    <string name="dialog_dosage_quantite">Quantité</string>
    <string name="dialog_annuler">Annuler</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_intervalle_regulier">Intervalle régulier</string>
    <string name="dialog_me_le_rappeler_avant">Me le rappeler avant</string>
    <string name="dialog_jours">jours</string>
    <string name="dialog_utiliser_votre_mot_de_passe">Utiliser votre mot de passe</string>
    <string name="dialog_mot_de_passe_incorrect">Mot de passe incorrect</string>
    <string name="dialog_mot_de_passe">Mot de passe</string>
    <string name="dialog_valider">Valider</string>
    <string name="selectionner_un_mode_d_importation">Selectionner un mode d\'importation</string>
    <string name="prendre_une_photo_de_l_ordonnance">Prendre une photo de l\'ordonnance</string>
    <string name="charger_une_ordonnance_depuis_le_tel">Charger une ordonnance depuis le téléphone</string>
    <string name="add_manually">Ajouter manuellement un traitement</string>
    <string name="debut">Début</string>
    <string name="fin">Fin</string>
    <string name="duree_de_la_prise">Durée de la prise</string>
    <string name="sans_fin">Sans fin</string>
    <string name="date_de_debut">Date de début</string>
    <string name="date_de_fin">Date de fin</string>
    <string name="date" translatable="false">Date</string>
    <string name="suivant">Suivant</string>
    <string name="intervalle">Intervalle</string>
    <string name="schema_de_prise_du_traitement">Schéma de prise du traitement</string>
    <string name="recapitulatif_du_traitement">Récapitulatif du traitement</string>
    <string name="confirmer">Confirmer</string>
    <string name="medicament">Médicament</string>
    <string name="nommedoc" translatable="false">NomMedoc</string>
    <string name="caracteristique">Caractéristique</string>
    <string name="textunite" translatable="false">textUnite</string>
    <string name="unite">Unité</string>
    <string name="periodicit">Périodicité</string>
    <string name="datefindetraitement" translatable="false">dateFinDeTraitement</string>
    <string name="date_de_fin_de_traitement">Date de fin de traitement</string>
    <string name="sousnomperiodicite" translatable="false">SousNomPeriodicite</string>
    <string name="prises">Prises</string>
    <string name="reapprovisionnement">Réapprovisionnement</string>
    <string name="quotidiennement">Quotidiennement</string>
    <string name="quoti">quotidiennement</string>
    <string name="au_besoin">Au besoin</string>
    <string name="sch_ma_de_prise_du_ntraitement">Schéma de prise du  traitement</string>
    <string name="ajouter_une_nouvelle_prise">Ajouter une nouvelle prise</string>
    <string name="rechercher">Rechercher</string>
    <string name="ajouter_un_traitement">Ajouter un traitement</string>
    <string name="ajouter_quand_meme">Ajouter quand même</string>
    <string name="type_de_medicament">Type de médicament</string>
    <string name="rappel_reappriovisionnement">Rappel réappriovisionnement</string>
    <string name="stock_faible">Stock faible</string>
    <string name="vous_recevrez_un_rappel_lorsque_votre_m_dicament_sera_bientot_epuis">Vous recevrez un rappel lorsque votre médicament sera bientôt épuisé</string>
    <string name="stock_actuel">Stock Actuel</string>
    <string name="me_le_rappeler_avant">Me le rappeler avant</string>
    <string name="_7_jours">7 jours</string>
    <string name="heure_de_rappel">Heure de rappel</string>
    <string name="neuf_heure" translatable="false">09:00</string>
    <string name="mois">Mois</string>
    <string name="x" translatable="false">X</string>
    <string name="journal_des_effets_secondaires">Journal des effets secondaires</string>
    <string name="effets_secondaires">Effets secondaires</string>
    <string name="incompatibilite_detecte">Incompatibilité détectée</string>
    <string name="mes_traitements">Mes traitements</string>
    <string name="importer_un_traitement">Importer un traitement</string>
    <string name="prendre_une_nouvelle_photo">Prendre une nouvelle photo</string>
    <string name="choisir_depuis_la_galerie">Choisir depuis la galerie</string>
    <string name="valider_le_nouveau_traitement">Valider le nouveau traitement</string>
    <string name="mainheure" translatable="false">MainHeure</string>
    <string name="_1_comprim_s" translatable="false">1 Comprimé(s)</string>
    <string name="prise_x" translatable="false">Prise X</string>
    <string name="quantit">Quantité</string>
    <string name="nom_medicament" translatable="false">Nom_Médicament</string>
    <string name="comprime_s" translatable="false">COMPRIME(S)</string>
    <string name="substance_active">Substance active</string>
    <string name="laboratoire">Laboratoire</string>
    <string name="professionnel_de_sant">Professionnel de santé</string>
    <string name="jaques_dutronc" translatable="false">Jaques Dutronc</string>
    <string name="nom_effet" translatable="false">Nom_Effet</string>
    <string name="proqu_par_xxx" translatable="false">Proqué par : XXX</string>
    <string name="nom_m_dicament" translatable="false">Nom_Médicament</string>
    <string name="_5_par_jours" translatable="false">5 par jours</string>
    <string name="jusqu_au_18_07_2023" translatable="false">Jusqu\'au 18/07/2023</string>
    <string name="_7_comprim_s_restants" translatable="false">7 Comprimé(s) restants</string>
    <string name="heureprise" translatable="false">HeurePrise</string>
    <string name="dosage">Dosage</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="accueil">Accueil</string>
    <string name="traitements">Traitements</string>
    <string name="messages">Contacts</string>
    <string name="authentification_biometrique">Authentification biométrique</string>
    <string name="utilisez_empreinte_digitale">Utilisez votre empreinte digitale pour vous authentifier</string>
    <string name="utilisez_mdp">Utiliser le mot de passe</string>
    <string name="invalid_email">Adresse e-mail non valide</string>
    <string name="rgpd">RGPD</string>
    <string name="janvier">Janvier</string>
    <string name="fevrier">Février</string>
    <string name="mars">Mars</string>
    <string name="avril">Avril</string>
    <string name="mai">Mai</string>
    <string name="juin">Juin</string>
    <string name="juillet">Juillet</string>
    <string name="aout">Août</string>
    <string name="septembre">Septembre</string>
    <string name="octobre">Octobre</string>
    <string name="novembre">Novembre</string>
    <string name="decembre">Décembre</string>
    <string name="prise">Prise</string>
    <string name="jours">Jours</string>
    <string name="jour">Jour</string>
    <string name="semaines">Semaines</string>
    <string name="tous_les">Tous les</string>
    <string name="toutes_les">Toutes les</string>
    <string name="toutes_2_semaines">Toutes les 2 Semaines</string>
    <string name="indetermine">Inderterminé</string>
    <string name="_17_00" translatable="false">17:00</string>
    <string name="meme_heure_meme_quanti">Même heure, même quantité</string>
    <string name="tous_les_3_jours_toutes_les_2_semaines">Ex : Tous les 3 jours, toutes les 2 semaines</string>
    <string name="pas_de_prise_regu">Pas de prise régulière</string>
    <string name="comprime">Comprimé</string>
    <string name="gellule">Gellule</string>
    <string name="sachet">Sachet</string>
    <string name="sirop">Sirop</string>
    <string name="pipette">Pipette</string>
    <string name="seringue">Seringue</string>
    <string name="bonbon">Bonbon</string>
    <string name="non">NON</string>
    <string name="oui">OUI</string>
    <string name="voulez_vous_vraiment_supprimer_ce_traitement">Voulez-vous vraiment supprimer ce traitement ?</string>
    <string name="jour_min">jour</string>
    <string name="jours_min">jours</string>
    <string name="provoque_par">Provoqué par : </string>
    <string name="par_jour">par Jour</string>
    <string name="tous_les_min">tous les</string>
    <string name="traitement_expire">Traitement expiré</string>
    <string name="termine">Terminé</string>
    <string name="termine_le">Terminé le</string>
    <string name="s_restants">s restants</string>
    <string name="debute_le">Débute le</string>
    <string name="jusquau">Jusqu\'au</string>
    <string name="Deconnexion">Déconnexion</string>
    <string name="lundi">L</string>
    <string name="mardi">M</string>
    <string name="mercredi">M</string>
    <string name="jeudi">J</string>
    <string name="vendredi">V</string>
    <string name="samedi">S</string>
    <string name="dimanche">D</string>
    <string name="aucun_effet_traitement">Aucun effet traitement</string>
    <string name="aucun_effet_secondaire">Aucun effet secondaire</string>
    <string name="prendre">Prendre</string>
    <string name="pris">Pris</string>
    <string name="Stock">Stock</string>
    <string name="textStock">textStock</string>
    <string name="Messagerie">Messagerie</string>
    <string name="textMessage">textMessage</string>
    <string name="titreMessage">titreMessage</string>
    <string name="parametre">Paramètres</string>
    <string name="aucun_traitement">Aucun traitement</string>
    <string name="aucun_medicament_prevu">Aucun médicament prévu !</string>
    <string name="Utilisateur">Utilisateur</string>
    <string name="dark_mode">Mode sombre</string>
    <string name="supprimer_compte">Supprimer le compte</string>
    <string name="rpps_s" translatable="false">Rpps : %s</string>
    <string name="prenom_s">Prénom : %s</string>
    <string name="nom_s">Nom : %s</string>
    <string name="email_s">Email : %s</string>
    <string name="specialite_s">Spécialité : %s</string>
    <string name="phone_s">Téléphone : %s</string>
    <string name="adresse_s">Adresse : %s</string>
    <string name="code_postal_s">Code postal : %s</string>
    <string name="ville_s">Ville : %s</string>
    <string name="sexe_s">Sexe : %s</string>
    <string name="contact">Contact</string>
    <string name="image_porte_de_sortie">Image d\'une porte de sortie</string>
    <string name="voir_mes_informations">Voir mes informations</string>
    <string name="contentDescriptionRetour">Bouton de retour à la page précédente</string>
</resources>