<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.contacts.AfficheDetailsMedecinFragment">


    <ImageView
        android:id="@+id/LogoMedicaZeldaDetailsMed"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_medicalink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titreContactsDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="@string/contact"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoMedicaZeldaDetailsMed" />

    <TextView
        android:id="@+id/RppsDetailMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/rpps_s"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RetourDetailMed" />

    <TextView
        android:id="@+id/PrenomDetailMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/prenom_s"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/RppsDetailMed"
        app:layout_constraintTop_toBottomOf="@+id/RppsDetailMed" />

    <TextView
        android:id="@+id/NomDetailMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/nom_s"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/RppsDetailMed"
        app:layout_constraintTop_toBottomOf="@+id/PrenomDetailMed" />

    <TextView
        android:id="@+id/SpecialiteDetailMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/specialite_s"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/RppsDetailMed"
        app:layout_constraintTop_toBottomOf="@+id/NomDetailMed" />


    <TextView
        android:id="@+id/EmailDetailMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/email_s"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/RppsDetailMed"
        app:layout_constraintTop_toBottomOf="@+id/SpecialiteDetailMed" />

    <TextView
        android:id="@+id/PhoneDetailMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/phone_s"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/RppsDetailMed"
        app:layout_constraintTop_toBottomOf="@+id/EmailDetailMed" />

    <TextView
        android:id="@+id/AddressDetailMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/adresse_s"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/RppsDetailMed"
        app:layout_constraintTop_toBottomOf="@+id/PhoneDetailMed" />


    <TextView
        android:id="@+id/ZipCodeDetailMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/code_postal_s"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/RppsDetailMed"
        app:layout_constraintTop_toBottomOf="@+id/AddressDetailMed" />

    <TextView
        android:id="@+id/CityDetailMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/ville_s"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/RppsDetailMed"
        app:layout_constraintTop_toBottomOf="@+id/ZipCodeDetailMed" />

    <TextView
        android:id="@+id/GenderDetailMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/sexe_s"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/RppsDetailMed"
        app:layout_constraintTop_toBottomOf="@+id/CityDetailMed" />

    <ImageView
        android:id="@+id/RetourDetailMed"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/annuler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/titreContactsDetails"
        app:layout_constraintTop_toBottomOf="@+id/titreContactsDetails" />


</androidx.constraintlayout.widget.ConstraintLayout>