<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titreHeurePrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_dosage"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/quantiteDialogInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_dosage_quantite"
        android:inputType="number"
        android:maxLength="2"
        android:layout_marginBottom="16dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sauterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/dialog_annuler"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/prendreButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/dialog_ok"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>
