<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_item_recap"
    android:layout_width="match_parent"
    android:layout_height="118dp"
    android:background="@drawable/rounded_blue_button_background">

    <TextView
        android:id="@+id/numeroPrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/nom_medicament"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/dosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/comprime_s"
        android:textColor="#000000"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/provoquePar"
        app:layout_constraintStart_toStartOf="@+id/numeroPrise" />

    <TextView
        android:id="@+id/provoquePar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/substance_active"
        android:textColor="#000000"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nbComprimesRestants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/numeroPrise" />

    <TextView
        android:id="@+id/nbComprimesRestants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/quicksand_semibold"
        android:gravity="start"
        android:text="@string/laboratoire"
        android:textColor="#000000"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/provoquePar" />

</androidx.constraintlayout.widget.ConstraintLayout>