<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parametreFragment">

    <LinearLayout
        android:id="@+id/deleteAccount"
        android:layout_width="325dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_red_button_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:layout_constraintEnd_toEndOf="@+id/cardDarkMode"
        app:layout_constraintStart_toStartOf="@+id/cardDarkMode"
        app:layout_constraintTop_toBottomOf="@+id/cardDeconnexion">


        <TextView
            android:id="@+id/supprimer_compte_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_semibold"
            android:gravity="center"
            android:text="@string/supprimer_compte"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardDarkMode"
        android:layout_width="325dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_blue_button_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardInfo">


        <TextView
            android:id="@+id/dark_mode_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_semibold"
            android:gravity="center"
            android:text="@string/dark_mode"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:thumbTint="#3E76CD"
            android:trackTint="@android:color/holo_blue_light" />
    </LinearLayout>

    <TextView
        android:id="@+id/titreParametre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="start"
        android:text="@string/parametre"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cardDeconnexion"
        android:layout_width="325dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_blue_button_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDarkMode">


        <TextView
            android:id="@+id/deconnexion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_semibold"
            android:gravity="center"
            android:text="@string/Deconnexion"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/image_porte_de_sortie"
            app:srcCompat="@drawable/sortie"
            app:tint="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardInfo"
        android:layout_width="325dp"
        android:layout_height="69dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_blue_button_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoRetour">


        <TextView
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_semibold"
            android:gravity="center"
            android:text="@string/voir_mes_informations"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/userInfoRetour"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titreParametre"
        app:layout_constraintTop_toBottomOf="@+id/titreParametre"
        app:srcCompat="@drawable/annuler"
        android:contentDescription="@string/contentDescriptionRetour" />

</androidx.constraintlayout.widget.ConstraintLayout>
